--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "compressImages": "gulp images",
         "deleteImages": "gulp cleanimg",
         "clean": "gulp cleandist",
-        "build": "gulp build"
+        "build": "gulp build",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "contributors": [
         {
@@ -22,6 +24,7 @@
         }
     ],
     "license": "ISC",
+    "homepage": "https://weeniebeenie.github.io/tenloc",
     "devDependencies": {
         "@babel/cli": "^7.23.0",
         "@babel/core": "^7.23.2",
@@ -32,6 +35,7 @@
         "browser-sync": "^2.29.3",
         "compress-images": "^2.0.5",
         "deepmerge": "^4.3.1",
+        "gh-pages": "^6.0.0",
         "gifsicle": "^5.3.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^8.0.0",
@@ -44,6 +48,7 @@
         "gulp-uglify-es": "^3.0.0",
         "lazysizes": "^5.3.2",
         "lorem-ipsum": "^2.0.8",
+        "npm-path": "^2.0.4",
         "pngquant-bin": "^6.0.0",
         "sass": "^1.69.4",
         "swiper": "^11.0.3",
