--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@babel/core": "^7.23.2",
         "@babel/preset-env": "^7.23.2",
         "@babel/register": "^7.22.15",
+        "@fancyapps/ui": "^5.0.25",
         "@fortawesome/fontawesome-free": "^6.4.2",
         "babel-loader": "^9.1.3",
         "browser-sync": "^2.29.3",
