--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "tenloc",
+    "name": "diploma",
     "version": "1.0.0",
-    "description": "RocketADS FE test project",
+    "description": "Degree work",
     "main": "gulpfile.babel.js",
     "scripts": {
         "start": "webpack",
@@ -24,7 +24,7 @@
         }
     ],
     "license": "ISC",
-    "homepage": "https://weeniebeenie.github.io/tenloc",
+    "homepage": "https://weeniebeenie.github.io/diploma",
     "devDependencies": {
         "@babel/cli": "^7.23.0",
         "@babel/core": "^7.23.2",
