--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "clean": "gulp cleandist",
         "build": "gulp build",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d dist"
     },
     "contributors": [
         {
